--- a/posts/index.org
+++ b/posts/index.org
@@ -2,9 +2,48 @@
 #+ORGA_PUBLISH_KEYWORD: PUBLISHED
 #+TODO: DRAFT(d) | PUBLISHED(p) CANCELLED(c)
 
-* DRAFT Emacs is no text editor | Eigenbahn blog                       :blog:
+* DRAFT Definition of Done
+
+Resist the urge to tinkering
+
+When you automate something, you do not just make that task easier, but you also improve your automation skills. This means that next time you want to automate something, that too will be easier, and the
+
+* DRAFT Emacs is no text editor | Eigenbahn blog                       :emacs:
 
 https://www.eigenbahn.com/2020/01/12/emacs-is-no-editor
+
+Emacs is stable. You can get back to it after years, and immediately be productive. That's why my alternative editor keeps changing (UltraEdit, Sublime, VSCode), but Emacs has been a recurring thing since the early nineties.
+
+For instance, I was editing an extensive code comment lately, and my fingers just went =M-q= to word wrap the comment block. I hadn't done that since the years I read email with RMAIL (early nineties), but without thinking, the key combination happened.
+
+Compared to Emacs, most text editors (like VSCode) are glorified typewriters.
+Compared to Emacs, most word processors (like MS Word) are just text editors with formatting.
+Emacs is a true text processing platform.
+
+* PUBLISHED Emacs? Help!                                              :emacs:
+CLOSED: [2020-02-15 za 17:37]
+
+A powertool like Emacs can be intimidating for beginners. But actually, Emacs is very beginner-friendly, because it comes standard with a plethora of help features. In this post, I'll give some starting points, and show what help functions I use the most.
+
+First, just start up a vanilla Emacs (use =emacs -q= to bypass any user configuration files, if necessary) and the startup screen provides you with some helpful entry points, like the Emacs manual and [[https://www.gnu.org/software/emacs/tour/][guided tour]]. Of course, you can find the same information, and much more, under the /Help/ menu item.
+
+The manual that you can open from the startup screen teaches you some Emacs jargon, like how key bindings are defined. It provides an interactive introduction with exercises you can perform in the same buffer. It teaches you the Emacs-way to do things like navigate a document. To my taste its a bit dogmatic about that: I prefer arrow keys and PgUp/Dn to navigate, but the tutorial sticks to =C-v/M-v= and the likes.
+
+The startup screen also contains a link to the Emacs manual, which introduces us to the wonderful world of [[https://www.gnu.org/software/texinfo/manual/info-stnd/html_node/index.html][Info]]. We'll come back to that later, when we discuss the =C-h= key. For now, let's assume that Info is like the web: hypertext with links. So, open the manual and have a look around. What I like to do every now and then, is page though the documents by just pressing the space bar repeatedly. This is like leafing through a book and never fails to uncover gems I didn't know yet.
+
+Section 1 "The Organization of the Screen" introduces much Emacs jargon that may put off beginners. This section explains words like /frame/, /window/, /buffer/, /point/, /mode line/ and /mini buffer/, all essential to be able to use all other information that is available to us.
+
+Then, when you actually start to use Emacs, the menu bar provides access to most common commands, including the key bindings that go with them for commands you find you need most often. /Please/ resist the urge to install all those shiny third-party packages for now, and first dig through all the features that Emacs ships with out of the box, like searching, bookmarks, email and version control. Also have a look at all you can customize through the /Options/ menu. But again, /please/ stick with the defaults at first. They have been selected based on years of experience, and more often than not make more sense that you might think at first (promise!).
+
+Finally, I you ever wonder /How do I do X?:/ =C-h= is your friend.
+- =C-h ?= shows all help command, including the ones I use most:
+- =C-h a= (apropos) show commands matching a pattern
+- =C-h k= describes a key
+- =C-h f= describes a function (by default the function under point) and the keys associated with it
+- =C-h v= describes a variable, its current value, its original value, and its possible values
+- =C-h i= starts Info, which opens a whole library full of manuals, I don't believe you I will ever finish in this lifetime
+
+Have fun exploring Emacs!
 
 * DRAFT How to make impossible choices        :productivity:org:emacs:coding:
 
